# shirokane_cup

./: .gitignore  Dockerfile  db_initialization.sh  main.py  pyproject.toml  run.sh  views.py
competitions/1/: config.py
competitions/tutorial_houseprice/: ScoreCalculator.py  __init__.py  competition_initialization.sh  macro.html  models.py
competitions/tutorial_houseprice/data/: sample_submission.csv
competitions/tutorial_houseprice/db/: submission.db
competitions/tutorial_houseprice/src/: models.py
competitions/tutorial_houseprice/templates/: macro.html
data/: competitions.csv  shirokane_cup.db  users.csv
data/competition_data/: true_answer.csv
data/user_data/: users.csv
db/: create_table.sql  shirokane_cup.db  user.db
pages/: data.py  mysubmission.py
routers/: __init__.py  competitions.py  data.py  discussion.py  leaderboard.py  login.py  mysubmission.py  mysubmissions.py  overview.py  submit.py  submitresult.py
sql/: create_tables.sql  make_backup.sql
src/: auth.py  compe_db.py  crud.py  data_check.py  database.py  init_db.py  load_db.py  models.py  schemas.py  score.py  utils.py
static/: style.css
templates/: competitions.html  data.html  discussion.html  discussion_new.html  discussion_post.html  index.html  layout.html  leaderboard.html  login.html  macro.html  mysubmission.html  mysubmissions.html  overview.html  submit.html  submitresult.html  top_page.html
